Added docs and update readme

--- a/docs/1.STARTING.md
+++ b/docs/1.STARTING.md
@@ -1,12 +1,6 @@
-# Quote Manager (quote-manager)
+## Install Quasar
 
-Project to control personal/professional quotes, sales and opportunities.
-
-Develop with Vue and Quasar Framework.
-
-
-## Installing quasar
-```bash
+```sh
 yarn global add @quasar/cli
 yarn create quasar
 
@@ -19,4 +13,16 @@ npm init quasar
 
 pnpm add -g @quasar/cli # experimental support
 pnpm create quasar # experimental support
+```
+
+## Create project
+
+```sh
+yarn create your_app_name_here
+
+# or:
+npm init your_app_name_here
+
+# or:
+pnpm create your_app_name_here # experimental support
 ```
