--- a/docs/1.STARTING.md
+++ b/docs/1.STARTING.md
@@ -1,4 +1,4 @@
-## Install Quasar
+## Installing quasar
 
 ```sh
 yarn global add @quasar/cli
@@ -15,7 +15,7 @@ pnpm add -g @quasar/cli # experimental support
 pnpm create quasar # experimental support
 ```
 
-## Create project
+## Creating your first quasar project
 
 ```sh
 yarn create your_app_name_here
