--- a/docs/2.SETUP.md
+++ b/docs/2.SETUP.md
@@ -8,7 +8,27 @@ npm install
 ### Start the app in development mode (hot-code reloading, error reporting, etc.)
 ```bash
 quasar dev
+# or
+npm run dev
 ```
+
+> **Note:** We have the following commands setup properly in [package.json](../package.json)
+>
+> "dev": "quasar dev"
+>
+> "stg": "quasar dev"
+>
+> "build": "quasar build"
+>
+> "build:pwa": "quasar build -m pwa"
+>
+> "lint": "eslint --ext .js,.ts,.vue ./"
+>
+> "app": "quasar dev -m electron"
+>
+> "pkg": "quasar build -m electron"
+>
+> "build-pkg": "quasar build -m electron -T all"
 
 ### Lint the files
 ```bash
