Implemented firebase and github actions

--- a/docs/3.HOW_TO_RUN.md
+++ b/docs/3.HOW_TO_RUN.md
@@ -36,6 +36,16 @@ const languages = [
   { value: 'pt-BR', label: 'Portuguese' }
 ]
 
+const firebaseConfig = {
+  apiKey: '',
+  authDomain: '',
+  projectId: '',
+  storageBucket: '',
+  messagingSenderId: '',
+  appId: '',
+  measurementId: ''
+}
+
 export {
   environment,
   ui,
